Header, Mission and Tea Specials placed

--- a/index.html
+++ b/index.html
@@ -42,23 +42,23 @@
         </div>
 
         <div class="tea-image">
-          <img src="./resources/images/img-berryblitz.jpg" />
-          <h4>Berryblitz Tea</h4>
+          <img src="./resources/images/img-spiced-rum.jpg" />
+          <h4>Spiced Rum Tea</h4>
         </div>
 
         <div class="tea-image">
-          <img src="./resources/images/img-berryblitz.jpg" />
-          <h4>Berryblitz Tea</h4>
+          <img src="./resources/images/img-donut.jpg" />
+          <h4>Seasonal Donuts</h4>
         </div>
 
         <div class="tea-image">
-          <img src="./resources/images/img-berryblitz.jpg" />
-          <h4>Berryblitz Tea</h4>
+          <img src="./resources/images/img-myrtle-ave.jpg" />
+          <h4>Myrtle Avenue Tea</h4>
         </div>
 
         <div class="tea-image">
-          <img src="./resources/images/img-berryblitz.jpg" />
-          <h4>Berryblitz Tea</h4>
+          <img src="./resources/images/img-bedford-bizarre.jpg" />
+          <h4>Bedford Bizarre Tea</h4>
         </div>
       </div>
 
