--- a/index.html
+++ b/index.html
@@ -64,6 +64,34 @@
 
     </div>
 
+      <div class="locations-container">
+        <h2>Locations</h2>
+        <div class="locations-image">
+          <div class="location-item">
+            <h3>Downtown</h3>
+            <p>384 West 4th St</p>
+            <p>Suite 108</p>
+            <p>Portland, Maine</p>
+          </div>
+
+          <div class="location-item">
+            <h3>East Bayside</h3>
+            <p>3433 Phisherman's Avenue</p>
+            <p>(Northwest Corner)</p>
+            <p>Portland, Maine</p>
+          </div>
+
+
+          <div class="location-item">
+            <h3>Oakdale</h3>
+            <p>55 Crescent Avenue</p>
+            <p>Second Floor</p>
+            <p>Portland, Maine</p>
+          </div>
+        </div>
+
+    </div>
+
   <!--End Main Content-->
   </div>
 
@@ -71,6 +99,13 @@
 
     <!--Footer-->
     <footer>
+      <div id="contact-info">
+        <h2>The Tea Cozy</h2>
+        <h5>contact@theteacozy.com</h5>
+        <h5>917-555-8904</h5>
+      </div>
+
+      <div id="copyright"><span>&copy; The Tea Cozy 2017</span></div>
     </footer>
     <!--End Footer-->
 </body>
